--- a/langs/fr_FR/export-compta.lang
+++ b/langs/fr_FR/export-compta.lang
@@ -14,7 +14,7 @@ ExportComptaSetup=Configuration de l'export comptable
 ExportFormat=Format d'export
 quadratus=Quadratus
 sage=Sage
-ecritures_bancaires=Ecritures bancaires
+ecritures_bancaires=Écritures bancaires
 reglement_tiers=Règlements tiers
 ecritures_comptables_vente=Ecritures comptables ventes
 ecritures_comptables_achat=Ecritures comptables achats
